--- a/app/src/main/res/layout/file_layout.xml
+++ b/app/src/main/res/layout/file_layout.xml
@@ -35,7 +35,7 @@
             android:id="@+id/btnsave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="写入" />
+            android:text="写入SD" />
 
         <Button
             android:id="@+id/btnclean"
@@ -48,5 +48,5 @@
         android:id="@+id/btnread"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="读取" />
+        android:text="读取SD" />
 </LinearLayout>
